# exhibit_manager

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
backend/: .gitignore  Cargo.toml  Rocket.toml  exhibits.db
backend/.backups/: backup_2025-01-21_12-48-58.db  backup_2025-01-21_14-29-42.db
backend/exhibit_dev_data/: exhibits.json
backend/src/: dev.rs  errors.rs  main.rs  models.rs
backend/src/api/: development_util_handlers.rs  exhibit_handlers.rs  github_handlers.rs  jotform_handlers.rs  mod.rs  part_handlers.rs
backend/src/api/dev/: create_dummy_exhibits.rs  mod.rs  reset_db.rs
backend/src/api/exhibits/: create_exhibit.rs  create_exhibit_note.rs  delete_exhibit.rs  delete_exhibit_note.rs  get_exhibit.rs  get_exhibit_note.rs  list_exhibit_notes.rs  list_exhibits.rs  mod.rs  random_exhibit.rs  update_exhibit.rs
backend/src/api/filters/: db_filter.rs  mod.rs
backend/src/api/github/: bug_report.rs  mod.rs
backend/src/api/handlers/: bug_report_handlers.rs  exhibit_handlers.rs  mod.rs  part_handlers.rs
backend/src/api/jotforms/: change_status.rs  delete_jotform.rs  get_jotform.rs  list_jotforms.rs  mod.rs
backend/src/api/parts/: create_part.rs  create_part_note.rs  delete_part.rs  delete_part_note.rs  get_part.rs  get_part_note.rs  get_parts_by_ids.rs  list_parts.rs  list_parts_notes.rs  mod.rs  update_part.rs
backend/src/api/routes/: bug_report_routes.rs  exhibit_routes.rs  mod.rs  part_routes.rs
backend/src/api/tests/: mod.rs
backend/src/api/tests/routes_tests/: bug_report_routes_tests.rs  exhibit_routes_tests.rs  mod.rs  (+1 more)
backend/src/db/: connection.rs  db_connection.rs  mod.rs  tests.rs
backend/src/db/repositories/: exhibit_repository.rs  mod.rs  note_repository.rs  part_repository.rs
backend/src/db/tests/: connection_tests.rs  mod.rs
backend/src/filters/: mod.rs
backend/src/handlers/: exhibit_handlers.rs  mod.rs  part_handlers.rs
backend/src/jotform/: jotform_api.rs  mod.rs  raw_submission.rs
backend/src/jotform_api/: jotform_api.rs  mod.rs  raw_submission.rs  tests.rs
backend/src/models/: bug_report.rs  exhibit.rs  jotform.rs  mod.rs  note.rs  part.rs  update_exhibit.rs  update_part.rs
backend/src/repo/: exhibit_repo.rs  jotform_repo.rs  mod.rs  part_repo.rs
backend/src/repositories/: exhibit_repository.rs  mod.rs  note_repository.rs  part_repository.rs
backend/src/routes/: bug_report_routes.rs  exhibit_routes.rs  mod.rs  part_routes.rs
backend/src/tests/: mod.rs
backend/src/tests/db_tests/: mod.rs
backend/src/tests/repository_tests/: exhibit_repository_tests.rs  part_repository_tests.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/auth/: auth.rs  auth_commands.rs  commands.rs  data_commands.rs  mod.rs
src-tauri/src/store/: tokens.rs
src-tauri/src/token_manager/: tokens.rs
(+147 files in other folders)
