[package]
name = "backend"
version = "0.1.1"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.38"
dotenv = "0.15.0"
env_logger = "0.11.5"
futures = "0.3.31"
log = "0.4.22"
rand = "0.8.5"
reqwest = { version = "0.12.8", features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
sanitize-filename = "0.5.0"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["full"] }
urlencoding = "2.1.3"
uuid = { version = "1.11.0", features = ["v4"] }
warp = "0.3.7"
