[package]
name = "backend"
version = "0.1.2"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.38"
dotenv = "0.15.0"
env_logger = "0.11.5"
futures = "0.3.31"
log = "0.4.22"
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
rand = "0.8.5"
reqwest = { version = "0.12.8", features = ["json", "rustls-tls"] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
sanitize-filename = "0.5.0"
serde = "1.0.216"
thiserror = "2.0.9"
urlencoding = "2.1.3"
uuid = { version = "1.11.0", features = ["v4"] }
validator = { version = "0.19.0", features = ["derive"] }
