[package]
name = "exhibit_manager_backend"
version = "0.1.5"
edition = "2021"

[dependencies]
chrono = "0.4.38"
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
rand = "0.8.5"
reqwest = { version = "0.12.8", features = ["json", "rustls-tls"] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
serde = "1.0.216"
thiserror = "2.0.9"
urlencoding = "2.1.3"
validator = { version = "0.19.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }
base64 = "0.22.1"
